# Neural-Networks-from-Scratch

./: LICENSE  Makefile  README.md  Untitled.ipynb  activations.py  nn.py  pyproject.toml  requirements.lint.txt  requirements.txt  run_pytest.sh  utils.py
.github/: pull_request_template.md
.github/workflows/: python-app.yml
neural_networks/: __init__.py  activations.py  backend.py  clip.py  constants.py  losses.py  nn.py  optimizers.py
neural_networks/activations/: README.ipynb  README.md  __init__.py  activations_concepts.ipynb  base.py  concepts.ipynb  identity.py  relu.py  sigmoid.py  softmax.py  tanh.py
neural_networks/attention/: README.md  __init__.py  concepts.ipynb  multihead_attention.py  projection.py  scaled_dot_product_attention.py
neural_networks/core/: activation_base.py  loss_base.py  optimizer_base.py
neural_networks/layers/: README.ipynb  README.md  __init__.py  concepts.ipynb  dense.py
neural_networks/losses/: README.ipynb  README.md  __init__.py  base.py  concepts.ipynb  cross_entropy.py  cross_entropy_loss.py  mse.py  mse_loss.py  rmse.py  rmse_loss.py  rmse_loss_v2.py  rmse_v2.py
neural_networks/optimizers/: README.ipynb  README.md  __init__.py  adam.py  base.py  optimizers_concepts.ipynb  rmsprop.py  sgd.py
tests/: conftest.py  demo.ipynb  templates.py  test_activations.py  test_attention.py  test_nn.py  test_optimizers.py
